force-app/main/default/objects/Dispatch__c/fields/Week_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Week_in_Month__c</fullName>
    <description>Week in month, which may start in the previous month</description>
    <label>Week in Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>