force-app/main/default/objects/Dispatch__c/fields/Weight_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_per_Unit__c</fullName>
    <description>Weight per unit in grams</description>
    <formula>IF( Units__c = 0, 0, 1000 * Tonnage__c /  Units__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weight per unit in grams</inlineHelpText>
    <label>Weight per Unit</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>