force-app/main/default/objects/Dispatch__c/fields/Year_and_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_and_Month__c</fullName>
    <formula>Month__r.Year_and_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year and Month</label>
    <type>Text</type>
</CustomField>