force-app/main/default/objects/Dispatch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dispatch_ID__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Planned_Delivery_Date__c</columns>
    <columns>Customer__c</columns>
    <columns>Bottle__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Units__c</columns>
    <columns>Tonnage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>