force-app/main/default/objects/Dispatch__c/listViews/June_July_Beverages.listView-meta.xml
<ListView>
    <fullName>June_July_Beverages</fullName>
    <columns>Dispatch_ID__c</columns>
    <columns>Unique_ID__c</columns>
    <columns>Year_and_Month__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer__c</columns>
    <columns>Month__c</columns>
    <columns>Bottle__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Forecast__c</columns>
    <columns>Haulier__c</columns>
    <columns>Units__c</columns>
    <columns>Tonnage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer__c</field>
        <operation>equals</operation>
        <value>Encirc Beverages</value>
    </filters>
    <label>June/July Beverages</label>
</ListView>