force-app/main/default/objects/Dispatch__c/listViews/today.listView-meta.xml
<ListView>
    <fullName>today</fullName>
    <columns>NAME</columns>
    <columns>Dispatch_Date_Time__c</columns>
    <columns>Dispatch_ID__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Month__c</columns>
    <columns>Warehouse_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>